--- a/Configuration/Adaptive_Meshing.cfg
+++ b/Configuration/Adaptive_Meshing.cfg
@@ -76,3 +76,45 @@ gcode:
                 (bed_mesh_min[0],bed_mesh_min[1]),                                                                                      
                 (bed_mesh_max[0],bed_mesh_max[1]),                                                                                      
             )) }
+
+            {% if mesh_margin > 0 %}                                                                                                    
+                {action_respond_info("Mesh margin is {}, mesh bounds extended by {}mm.".format(                                       
+                    (mesh_margin),                                                                                                      
+                    (mesh_margin),                                                                                       
+                )) }                                                                                                                    
+            {% else %}                                                                                                                  
+                {action_respond_info("Mesh margin is 0, margin not increased.")}                                                        
+            {% endif %}                                                                                                                 
+
+            {% if fuzz_amount > 0 %}                                                                                                    
+                {action_respond_info("Mesh point fuzzing enabled, points fuzzed up to {}mm.".format(                                     
+                    (fuzz_amount),                                                                                                      
+                )) }                                                                                                                    
+            {% else %}                                                                                                                  
+                {action_respond_info("Fuzz amount is 0, mesh points not fuzzed.")}                                                      
+            {% endif %}                                                                                                                 
+
+            { action_respond_info("Adapted mesh bounds: {}, {}.".format(                                                                 
+                (adapted_x_min, adapted_y_min),                                                                                         
+                (adapted_x_max, adapted_y_max),                                                                                         
+            )) }
+
+            {action_respond_info("KAMP adjustments successful. Happy KAMPing!")}
+
+        {% else %}
+
+            {action_respond_info("No objects detected! Check your gcode and make sure that EXCLUDE_OBJECT_DEFINE is happening before BED_MESH_CALIBRATE is called. Defaulting to regular meshing.")}
+            G4 P5000                                                                                                                # Wait 5 seconds to make error more visible
+        {% endif %}
+
+    {% endif %}
+
+    {% if probe_dock_enable == True %}
+        {attach_macro}                                                                                                              # Attach/deploy a probe if the probe is stored somewhere outside of the print area
+    {% endif %}
+
+    _BED_MESH_CALIBRATE mesh_min={adapted_x_min},{adapted_y_min} mesh_max={adapted_x_max},{adapted_y_max} ALGORITHM={algorithm} PROBE_COUNT={points_x},{points_y}
+
+    {% if probe_dock_enable == True %}
+        {detach_macro}                                                                                                              # Detach/stow a probe if the probe is stored somewhere outside of the print area
+    {% endif %}                                                                                                                     # End of verbose
